--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^4.0.0
   firebase_auth: ^6.0.0
   modal_progress_hud_nsn: ^0.5.1
+  cloud_firestore: ^6.0.0
 
 dev_dependencies:
   flutter_test:
